# dear-reader-bench

./: .gitignore  DESIGN.md  README.md  RESEARCH.md  pyproject.toml
data/: segments.json
research/panel/: README.md  critique-avt-industry.md  critique-benchmark-engineering.md  critique-humor-science.md  critique-psychometrics.md  design-avt-industry.md  design-benchmark-engineering.md  design-humor-science.md  design-psychometrics.md
src/dearreader_bench/: __init__.py  btmodel.py  rubric.py  schema.py  speakability.py
tests/: test_bench.py  test_btmodel.py
